fix: o on jump animation

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 }
 
 @keyframes jump {
-    o% {
+    0% {
         bottom: 0;
     }
 
